test/typeerrors/Examples/NestedLets.hs
-- stress test for chunky solver
-- Note: this program is well-typed
main a =
   let b = a 
   in let c = b
      in a